--- a/Home.html
+++ b/Home.html
@@ -34,13 +34,13 @@
     <link rel="canonical" href="index.html">
     <meta property="og:url" content="index.html">
   </head>
-  <body data-home-page="Home.html" data-home-page-title="Home" class="u-body u-overlap"><header class="u-clearfix u-header u-header" id="sec-1f55"><div class="u-clearfix u-sheet u-sheet-1">
+  <body class="u-body u-overlap"><header class="u-clearfix u-header u-header" id="sec-1f55"><div class="u-clearfix u-sheet u-sheet-1">
         <a href="Home.html" data-page-id="325217291" class="u-image u-logo u-image-1" data-image-width="700" data-image-height="259" title="Home">
           <img src="images/BoatNewBannerwhite.png" class="u-logo-image u-logo-image-1" data-image-width="64">
         </a>
         <nav class="u-menu u-menu-dropdown u-offcanvas u-offcanvas-shift u-menu-1">
           <div class="menu-collapse" style="font-size: 1rem; letter-spacing: 0px; font-weight: 500;">
-            <a class="u-border-active-palette-1-base u-border-hover-palette-1-base u-border-no-left u-border-no-right u-border-no-top u-button-style u-custom-left-right-menu-spacing u-custom-padding-bottom u-custom-text-shadow u-custom-top-bottom-menu-spacing u-nav-link u-text-active-white u-text-hover-white u-text-white" href="index.html#" style="text-shadow: 2px 2px 8px rgba(0,0,0,0.4);">
+            <a class="u-border-active-palette-1-base u-border-hover-palette-1-base u-border-no-left u-border-no-right u-border-no-top u-button-style u-custom-left-right-menu-spacing u-custom-padding-bottom u-custom-text-shadow u-custom-top-bottom-menu-spacing u-nav-link u-text-active-white u-text-hover-white u-text-white" href="Home.html#" style="text-shadow: 2px 2px 8px rgba(0,0,0,0.4);">
               <svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#menu-hamburger"></use></svg>
               <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><defs><symbol id="menu-hamburger" viewBox="0 0 16 16" style="width: 16px; height: 16px;"><rect y="1" width="16" height="2"></rect><rect y="7" width="16" height="2"></rect><rect y="13" width="16" height="2"></rect>
 </symbol>
@@ -167,7 +167,7 @@
           <a class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-body-alt-color u-btn-4" href="Why-Boat.html" data-page-id="1201311021">Why Boat?</a>
         </h1>
         <div class="u-border-1 u-border-white u-line u-line-horizontal u-line-1"></div>
-        <a href="index.html#" class="u-image u-logo u-image-3" data-image-width="700" data-image-height="259">
+        <a href="Home.html#" class="u-image u-logo u-image-3" data-image-width="700" data-image-height="259">
           <img src="images/BoatNewBannerwhite.png" class="u-logo-image u-logo-image-1" data-image-width="101.3334">
         </a>
         <a href="https://discordapp.com/oauth2/authorize?client_id=395896950224060416&amp;scope=bot&amp;permissions=2146958591" class="u-active-custom-color-2 u-btn u-btn-round u-button-style u-custom-color-2 u-custom-font u-heading-font u-hover-custom-color-3 u-radius-50 u-text-white u-btn-5" target="_blank">Add to Discord</a>
