--- a/team.html
+++ b/team.html
@@ -1,66 +1,174 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-<script src="cdn-cgi/apps/head/Z4kBcYRNoDQSI3eNCxdLPT-3KO0.js"></script><link rel="shortcut icon" type="image/png" href="images/icon.ico" />
+<title>Abuse Bot</title>
 <meta charset="UTF-8">
-<meta name="description" content="The best feature-rich Discord Music Bot . Supports YouTube, Spotify, SoundCloud, Mixer, Twitch, Vimeo, Bandcamp, Apple Music, iTunes, Deezer, Tidal and even music files sent to Discord.">
-<meta name="keywords" content="Discord,discord bot, discord music bot,discord youtube,Neeko, neeko discord,neeko discord bot,neeko bot,neeko youtube,neeko playlist,playlist,youtube,api,discord api,discord neeko,neeko,bot">
-<meta name="author" content="Neeko">
-<meta property="og:image" content="https://neeko-bot.xyz/images/logo.png">
-<meta name="theme-color" content="#00e1ff">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" type="text/css" href="css/style.min.css">
-<script async src="js/8f969aa430.js"></script>
-<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-<title>Neeko - Discord Music Bot</title>
+<link rel='icon' href='https://cdn.discordapp.com/attachments/598173883774009344/643930682359283713/logo.png' type='image/x-icon'/ >
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<head>
+<!-- Global site tag (gtag.js) - Google Adsense -->
+<script data-ad-client="ca-pub-5856795489237966" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-151866676-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-151866676-1');
+</script>
+<style>
+
+.a{
+  font-size: 13px
+}
+
+.b{
+  font-size: 15px
+}
+
+body {font-family: "Lato", sans-serif}
+
+body {
+  color: white;
+  background-color: #0A0A0A;
+  background-size: cover;
+  background-attachment: fixed;
+}
+
+
+
+</style>
 </head>
 <body>
-<div class="dd">
-<div id="mob"><span class="fa fa-list-ul"></span></div>
-<nav id="navigation">
-<div class="con">
-<a href="index.html"> <img async src="images/logo.png" alt="Logo" class="logo"></a>
-<div class="con-right">
-<ul>
-<li><a href="https://invite.neeko-bot.xyz/"><span class="fab fa-discord"></span> Add to Discord</a></li>
-<li><a href="commands.html"><svg width="22.5px" height="18.46px" aria-hidden="true" focusable="false" data-prefix="fal" data-icon="scroll" role="img" viewBox="0 0 640 512" class="svg-inline--fa fa-scroll fa-w-20 fa-3x"><path fill="currentColor" d="M608 352h-64V112C544 50.25 493.75 0 432 0H80C35.88 0 0 35.89 0 80v80c0 17.64 14.34 32 32 32h96v224c0 51.11 40.25 92.62 90.66 95.46v.54h312C590.94 512 640 462.95 640 402.67V384c0-17.64-14.34-32-32-32zM128 160H32V80c0-26.47 21.53-48 48-48s48 21.53 48 48v80zm160 256c0 35.3-28.72 64-64 64s-64-28.7-64-64V80c0-18-5.97-34.62-16.03-48H432c44.12 0 80 35.89 80 80v240H320c-17.66 0-32 14.36-32 32v32zm320-13.33c0 42.64-34.69 77.33-77.34 77.33H295.03c15.35-17.02 24.97-39.32 24.97-64v-32h288v18.67z" class=""></path></svg> Commands</a></li>
-<li><a href="https://www.patreon.com/NeekoBot" rel="noreferrer" `><span class="fas fa-headphones-alt"></span> Premium</a></li>
-<li><a href="https://support.neeko-bot.xyz"><span class="fas fa-info-circle"></span> Support</a>
-</li>
-<li><a href="team.html#"><span class="fas fa-users-cog"></span> Meet the Team</a></li>
-</ul>
+
+  <!-- Head -->
+
+<div class="w3-top">
+  <div class="w3-bar w3-black w3-card">
+    <a class="w3-bar-item w3-button w3-padding-large w3-hide-large" href="javascript:void(0)" onclick="myFunction()" title="Toggle Navigation Menu"><i class="   fa fa-bars"></i></a>
+    <a href="https://discord.gg/ZzhXzzd" target="_blank" class="w3-bar-item w3-button w3-right w3-padding-large w3-hide-small w3-hide-medium">JOIN OUR DISCORD</a>
+    <a href="https://top.gg/bot/368486558346772480/vote" target="_blank" class="w3-bar-item w3-button w3-right w3-padding-large w3-hide-small w3-hide-medium">VOTE FOR US</a>
+    <a href="https://discordapp.com/oauth2/authorize?client_id=368486558346772480&scope=bot&permissions=2146958847&response_type=code&redirect_uri=http%3A%2F%2Fabusebot.xyz%2F" target="_blank" class="w3-bar-item w3-button w3-right w3-padding-large w3-hide-small w3-hide-medium">ADD TO SERVER</a>
+    <a href="commands.html" class="w3-bar-item w3-button w3-right w3-padding-large w3-hide-small w3-hide-medium">COMMANDS</a>
+    <a href="index.html" class="w3-bar-item w3-button w3-right w3-padding-large w3-hide-small w3-hide-medium">HOME</a>
+    <img src="https://cdn.discordapp.com/attachments/598173883774009344/643930682359283713/logo.png" class="w3-bar-block w3-black w3-left" style="width:40px;margin-top:2px;margin-left:3px; margin-bottom:2px;">
+  </div>
 </div>
+
+<!-- Navbar on small screens (remove the onclick attribute if you want the navbar to always show on top of the content when clicking on the links) -->
+<div id="navDemo" class="w3-bar-block w3-black w3-hide w3-hide-large w3-top" style="margin-top:46px">
+  <a href="index.html" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">HOME</a>
+  <a href="commands.html" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">COMMANDS</a>
+  <a href="https://discordapp.com/oauth2/authorize?client_id=368486558346772480&scope=bot&permissions=2146958847&response_type=code&redirect_uri=http%3A%2F%2Fabusebot.xyz%2F" target="_blank" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">ADD TO SERVER</a>
+  <a href="https://top.gg/bot/368486558346772480/vote" target="_blank" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">VOTE FOR US</a>
+  <a href="https://discord.gg/ZzhXzzd" class="w3-bar-item w3-button w3-padding-large" target="_blank" onclick="myFunction()">JOIN OUR DISCORD</a>
 </div>
-</nav>
-<div class="team-page">
-<div class="team-page-title">Neeko Team</div>
-<div class="team-container">
+
+
+
+<div class="w3-center">
+  <div class="w3-col w3-container w3-hide-small w3-hide-medium s0 m0 l2">
+  </div>
+  <div class="a w3-col w3-container w3-center s12 m12 l8">
+
+    <h1 style="font-size:30px; font-weight: bold;" class=" w3-padding-64">STAFF</h1>
+
+    <div class="w3-single">
+      <img src="https://cdn.discordapp.com/avatars/335893092756488205/a_37406b0c4ccbfd0c01748b064982ab5a.gif" class="w3-round" alt="brad" style="width:110px">
+      <p class="b">BradGamez#1374</p>
+      <a class="w3-text-blue">Bot Founder</a>
+    </div>
+
+
+
+    <div class="w3-quarter">
+      <img src="https://cdn.discordapp.com/avatars/239903607250485249/98d693077926de3ae98524352a210318.png?size=2048" class="w3-round" alt="rosa" style="width:110px">
+      <p class="b">TheMaggiesGamers#0202</p>
+      <a class="w3-text-orange">Staff Manager</a><a class="w3-text-black"> | </a><a class="w3-text-red">Management</a><a class="w3-text-black"> | </a><a class="w3-text-indigo">Dev</a>
+    </div>
+
+    <div class="w3-quarter">
+      <img src="https://cdn.discordapp.com/avatars/350131569358405632/13fee7dc0402fdb861832b0e77ec9671.png?size=2048" class="w3-round" alt="gabe_" style="width:110px">
+      <p class="b">Gabe_#7626</p>
+      <a class="w3-text-orange">Staff Manager</a><a class="w3-text-black"> | </a><a class="w3-text-yellow">Marketing</a><a class="w3-text-black"> | </a><a class="w3-text-indigo">Dev</a>
+    </div>
+
+    <div class="w3-quarter">
+      <img src="https://cdn.discordapp.com/avatars/264191375396962315/a_e7181a90fb1575e98c5bd3b64fbf310b.gif" class="w3-round" alt="cindy" style="width:110px">
+      <p class="b">Cindy#0006</p>
+      <a class="w3-text-orange">Staff Manager</a><a class="w3-text-black"> | </a><a class="w3-text-yellow">Marketing</a>
+    </div>
+
+    <div class="w3-quarter">
+      <img src="https://cdn.discordapp.com/avatars/314146155564892160/a953466767b79b4b8249fae810fbf5c2.png?size=2048" class="w3-round" alt="rouge" style="width:110px">
+      <p class="b">Rouge#0734</p>
+      <a class="w3-text-orange">Staff Manager</a><a class="w3-text-black"> | </a><a class="w3-text-indigo">Dev</a>
+      <br><br>
+    </div>
+
+
+
+    <div class="w3-quarter">
+      <img src="https://cdn.discordapp.com/avatars/257330370490531840/cfda422880e5e70bfc3c81610f6c1b36.png?size=2048" class="w3-round" alt="max" style="width:110px">
+      <p class="b">ItsMax123#6798</p>
+      <a class="w3-text-purple">Website dev</a>
+    </div>
+
+    <div class="w3-quarter">
+      <img src="https://cdn.discordapp.com/avatars/423865550137982976/f101697e66c864bb4a042a4757ac177a.png?size=2048" class="w3-round" alt="owneyy" style="width:110px">
+      <p class="b">Owneyy#3672</p>
+      <a class="w3-text-light-green">Moderator</a>
+    </div>
+
+    <div class="w3-quarter">
+      <img src="https://cdn.discordapp.com/avatars/404591201329872897/398fa62d3b547a3bc0ccde2751d5374c.png?size=2048" class="w3-round" alt="lizzie" style="width:110px">
+      <p class="b">𝓛𝓲𝔃𝔃𝓲𝓮 𝓜𝓲𝓵𝓷𝓮𝓻#8810</p>
+      <a class="w3-text-deep-purple">Helper</a>
+    </div>
+
+    <div class="w3-quarter">
+      <img src="https://cdn.discordapp.com/avatars/364524509866491926/67847ede4221cab949168afb398c7aac.png?size=2048" class="w3-round" alt="jimmy" style="width:110px">
+      <p class="b">Jimmy......dont question it#4449</p>
+      <a class="w3-text-deep-purple">Helper</a>
+    </div>
+
+  </div>
 </div>
-<div class="team-page-title">Translators</div>
-<div class="translator-container">
-</div>
-</div>
-<footer class="footer-team">
-<div class=" txs ss">
-<p>&copy; Neeko Bot 2020
-</p>
-<p>website <span class="fas fa-code"></span> with <span class="fas fa-heart"></span> by <a rel="noreferrer" `>Neeko Team</a></p>
-</div>
+
+
+
+  <!-- Footer -->
+
+
+<footer class="w3-container w3-padding-32 w3-center w3-xlarge">
+  <p class="w3-small">Copyright © 2019 Abuse bot™ - All rights reserved.</p>
 </footer>
-</div>
-<div id="mob-menu">
-<div id="close"> <span class="fas fa-times"></span></div>
-<ul>
-<li><a href="index.html"><span class="fas fa-home"></span> Home</a></li>
-<li><a href="commands.html"><svg width="22.5px" height="18.46px" aria-hidden="true" focusable="false" data-prefix="fal" data-icon="scroll" role="img" viewBox="0 0 640 512" class="svg-inline--fa fa-scroll fa-w-20 fa-3x"><path fill="currentColor" d="M608 352h-64V112C544 50.25 493.75 0 432 0H80C35.88 0 0 35.89 0 80v80c0 17.64 14.34 32 32 32h96v224c0 51.11 40.25 92.62 90.66 95.46v.54h312C590.94 512 640 462.95 640 402.67V384c0-17.64-14.34-32-32-32zM128 160H32V80c0-26.47 21.53-48 48-48s48 21.53 48 48v80zm160 256c0 35.3-28.72 64-64 64s-64-28.7-64-64V80c0-18-5.97-34.62-16.03-48H432c44.12 0 80 35.89 80 80v240H320c-17.66 0-32 14.36-32 32v32zm320-13.33c0 42.64-34.69 77.33-77.34 77.33H295.03c15.35-17.02 24.97-39.32 24.97-64v-32h288v18.67z" class=""></path></svg> Commands</a></li>
-<li><a href="https://www.patreon.com/NeekoBot" rel="noreferrer" `><span class="fas fa-headphones-alt"></span> Premium</a></li>
-<li><a href="https://support.neeko-bot.xyz"><span class="fas fa-info-circle"></span> Support</a></li>
-<li><a href="https://invite.neeko-bot.xyz/"><span class="fab fa-discord"></span> Add to Discord</a></li>
-<li><a href="team.html#"><span class="fas fa-users-cog"></span> Meet the Team</a></li>
-</ul>
-</div>
-</div>
-<script async src="js/bm.js"></script>
-<script async src="js/team.js"></script>
+
+
+  <!-- Random stuff -->
+
+<script>
+
+// Used to toggle the menu on small screens when clicking on the menu button
+function myFunction() {
+  var x = document.getElementById("navDemo");
+  if (x.className.indexOf("w3-show") == -1) {
+    x.className += " w3-show";
+  } else {
+    x.className = x.className.replace(" w3-show", "");
+  }
+}
+
+// When the user clicks anywhere outside of the modal, close it
+var modal = document.getElementById('ticketModal');
+window.onclick = function(event) {
+  if (event.target == modal) {
+    modal.style.display = "none";
+  }
+}
+</script>
 </body>
 </html>
