--- a/index.html
+++ b/index.html
@@ -1,104 +1,84 @@
 <!DOCTYPE html>
 <html lang="en">
-<title>Abuse Bot</title>
-<meta charset="UTF-8">
-<link rel='icon' href='https://cdn.discordapp.com/attachments/598173883774009344/643930682359283713/logo.png' type='image/x-icon'/ >
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <head>
-<!-- Global site tag (gtag.js) - Google Adsense -->
-<script data-ad-client="ca-pub-5856795489237966" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-151866676-1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'UA-151866676-1');
-</script>
-<style>
-
-
-body {font-family: "Lato", sans-serif}
-
-body {
-  color: white;
-  background-color: #0A0A0A;
-  background-size: cover;
-  background-attachment: fixed;
-}
-
-</style>
+<meta charset="UTF-8">
+<meta name="description" content="Toasty the Discord bot. A fun, moderating, music playing and delicious Discord bot for all of your needs. Created by i am toast.">
+<title>Toasty the Discord bot</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<script src="cdn-cgi/apps/head/8BxKiV3LFSej8wey4MjQJpdYtuA.js"></script><link rel="shortcut icon" href="assets/images/favicon.ico" type="image/x-icon">
+<link rel="icon" href="assets/images/favicon.ico" type="image/x-icon">
+<link rel="stylesheet" href="assets/css/style.css" type="text/css">
+<link rel="stylesheet" href="https://csshake.surge.sh/csshake.min.css" type="text/css">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+<script src="assets/js/typed.min.js"></script>
+<script>if (window.location.href.startsWith('http://toasty.xyz') || window.location.href.startsWith('https://toasty.xyz')) window.location.href = 'https://toastybot.com';</script>
+<script>if (window.location.href.startsWith('http://')) window.location.href = window.location.href.replace('http://', 'https://');</script>
 </head>
-<body>
+<body style="font-family: 'Open Sans', sans-serif; background-color: #ffca60;">
 
-  <!-- Head -->
-
-<div class="w3-top">
-  <div class="w3-bar w3-black w3-card">
-    <a class="w3-bar-item w3-button w3-padding-large w3-hide-large" href="javascript:void(0)" onclick="myFunction()" title="Toggle Navigation Menu"><i class="   fa fa-bars"></i></a>
-    <a href="https://discord.gg/ZzhXzzd" target="_blank" class="w3-bar-item w3-button w3-right w3-padding-large w3-hide-small w3-hide-medium">JOIN OUR DISCORD</a>
-    <a href="https://top.gg/bot/368486558346772480/vote" target="_blank" class="w3-bar-item w3-button w3-right w3-padding-large w3-hide-small w3-hide-medium">VOTE FOR US</a>
-    <a href="https://discordapp.com/oauth2/authorize?client_id=368486558346772480&scope=bot&permissions=2146958847&response_type=code&redirect_uri=http%3A%2F%2Fabusebot.xyz%2F" target="_blank" class="w3-bar-item w3-button w3-right w3-padding-large w3-hide-small w3-hide-medium">ADD TO SERVER</a>
-    <a href="commands.html" class="w3-bar-item w3-button w3-right w3-padding-large w3-hide-small w3-hide-medium">COMMANDS</a>
-    <a href="index.html#" class="w3-bar-item w3-button w3-right w3-padding-large w3-hide-small w3-text-red w3-hide-medium">HOME</a>
-    <img src="https://cdn.discordapp.com/attachments/598173883774009344/643930682359283713/logo.png" class="w3-bar-block w3-black w3-left" style="width:40px;margin-top:2px;margin-left:3px; margin-bottom:2px;">
-  </div>
+<div class="navbar navbar-default navbar-fixed-top" role="navigation" style="background-color: #fff">
+<div class="container">
+<div class="navbar-header">
+<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+<span class="sr-only">Toggle navigation</span>
+<span class="icon-bar"></span>
+<span class="icon-bar"></span>
+<span class="icon-bar"></span>
+</button>
+<a class="navbar-brand shake-slow" href="index.html"><img style="width: 100px; height: 100px;" src="assets/images/toasty_transparent.png"></a>
+</div>
+<div class="navbar-collapse collapse">
+<ul class="nav navbar-nav navbar-right">
+<li><a href="features.html">Features</a></li>
+<li><a href="invite.html">Invite Me</a></li>
+<li><a href="donate.html">Donate</a></li>
+<li><a href="https://discordapp.com/invite/sKCDdfp">Support Server</a></li>
+</ul>
 </div>
 
-<!-- Navbar on small screens (remove the onclick attribute if you want the navbar to always show on top of the content when clicking on the links) -->
-<div id="navDemo" class="w3-bar-block w3-black w3-hide w3-hide-large w3-top" style="margin-top:46px">
-  <a href="index.html#" class="w3-bar-item w3-button w3-padding-large w3-red" onclick="myFunction()">HOME</a>
-  <a href="commands.html" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">COMMANDS</a>
-  <a href="https://discordapp.com/oauth2/authorize?client_id=368486558346772480&scope=bot&permissions=2146958847&response_type=code&redirect_uri=http%3A%2F%2Fabusebot.xyz%2F" target="_blank" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">ADD TO SERVER</a>
-  <a href="https://top.gg/bot/368486558346772480/vote" target="_blank" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">VOTE FOR US</a>
-  <a href="https://discord.gg/ZzhXzzd" target="_blank" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">JOIN OUR DISCORD</a>
 </div>
-
-
-
-
-<div style="padding:15% 0;" class="w3-center">
-
-  <h1 style="font-size:50px; font-weight: bold;">Abuse b<img src="https://cdn.discordapp.com/attachments/420234387590873089/630229389589741588/image.png" style="width: 30px">t</h1>
-
-  <div class="w3-container">
-      <a href="https://discordapp.com/oauth2/authorize?client_id=368486558346772480&scope=bot&permissions=2146958847" class="w3-round w3-button w3-padding-large w3-purple">Add to server</a>
-      <a href="commands.html" class="w3-round w3-button w3-padding-large w3-purple">Commands</a>
-  </div>
-
-  <br>
-  <p style="font-size:3vh" class="w3-padding-large">A multi-use bot with <u>new</u> features being created <u>every</u> week!<br>The creator, Brad, is 17 years old and loves to code. To see the full staff team click <a class="w3-text-blue" href="team.html">here.</a></p>
-
-  <div>
-
-  </div>
 </div>
-
-
-
-
+<style>
+    .btn-lg-custom {
+      padding: 16px 47px;
+      border-radius: 8px;
+      font-size: 17px;
+    }
+    .btn-lg:hover {
+      filter: brightness(90%);
+    }
+    .btn-lg-custom:hover {
+      filter: brightness(90%);
+    }
+  </style>
 <script>
-// Used to toggle the menu on small screens when clicking on the menu button
-function myFunction() {
-  var x = document.getElementById("navDemo");
-  if (x.className.indexOf("w3-show") == -1) {
-    x.className += " w3-show";
-  } else {
-    x.className = x.className.replace(" w3-show", "");
-  }
-}
+  document.addEventListener('DOMContentLoaded', function(event) {
+    var typed = new Typed('#typedCommands', {
+      strings: [';play Heart Afire', ';volume 5', ';ban @user', ';toggle noinvite', ';prune 100', ';gif', ';reddit', ';youtube', ';joke', ';fortnite', ';news', ';poll', ';pokemon', ';trade', ';roast', ';roleme', ';cookie', ';addrole @user', ';cat', ';advice', ';compliment', ';urban', ';info', ';queue', ';playlist', ';djrole'],
+      typeSpeed: 50,
+      backSpeed: 30,
+      loop: true
+    });
+  });
+  </script>
+<center>
+<h1 style="font-size: 80px; padding-top:100px; color: black;">Toasty Bot</h1>
+<h1 style="color: #23272A; padding-top: 25px; padding-bottom: 25px; font-weight: bold;">Make your Discord even <i>toastier</i>,
+<br>with Toasty!</h1>
+<span style="font-size: 20px; font-weight: bold; color: #2C2F33" id="typedCommands"></span><br><br><br>
+<a href="https://discordapp.com/oauth2/authorize?client_id=208946600620326912&scope=bot&permissions=8"><button type="button" class="btn btn-lg" style="background-color: #7289da; color: white;"><img src="https://mee6.xyz/assets/a219956caf348a5bc3434b17fce51349.svg">&nbsp;&nbsp;Add to Discord</button></a>
+&nbsp;
+<a href="features.html"><button type="button" class="btn btn-lg-custom" style="background-color: #23272a; color: white;">&nbsp;Learn More&nbsp;</button></a>
+<h4 style="color: #23272A; font-weight: 600; padding-top: 20px;">The only Discord bot that's useful, fun, and delicious.</h2>
+<div class="footer">
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 
-// When the user clicks anywhere outside of the modal, close it
-var modal = document.getElementById('ticketModal');
-window.onclick = function(event) {
-  if (event.target == modal) {
-    modal.style.display = "none";
-  }
-}
-</script>
+<ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-1185518089298036" data-ad-slot="4909194215" data-ad-format="auto">
+</ins>
+<script>
+        (adsbygoogle = window.adsbygoogle || []).push({});
+      </script>
+</div>
+</center>
 </body>
 </html>
