--- a/index.html
+++ b/index.html
@@ -1,84 +1,296 @@
 <!DOCTYPE html>
-<html lang="en">
+<html style="background-color: #eaeaea; overflow-y: auto;">
 <head>
-<meta charset="UTF-8">
-<meta name="description" content="Toasty the Discord bot. A fun, moderating, music playing and delicious Discord bot for all of your needs. Created by i am toast.">
-<title>Toasty the Discord bot</title>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<script src="cdn-cgi/apps/head/8BxKiV3LFSej8wey4MjQJpdYtuA.js"></script><link rel="shortcut icon" href="assets/images/favicon.ico" type="image/x-icon">
-<link rel="icon" href="assets/images/favicon.ico" type="image/x-icon">
-<link rel="stylesheet" href="assets/css/style.css" type="text/css">
-<link rel="stylesheet" href="https://csshake.surge.sh/csshake.min.css" type="text/css">
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-<script src="assets/js/typed.min.js"></script>
-<script>if (window.location.href.startsWith('http://toasty.xyz') || window.location.href.startsWith('https://toasty.xyz')) window.location.href = 'https://toastybot.com';</script>
-<script>if (window.location.href.startsWith('http://')) window.location.href = window.location.href.replace('http://', 'https://');</script>
+	<meta charset="UTF-8">
+	<meta name="description"
+		content="">
+	<meta name="keywords" content="Discord, Discord bots, Discord bot, Thunderstruck">
+	<meta name="author" content="Thunder">
+	<link rel="icon" href="dashboard/public/images/loho.png">
+	<link rel="stylesheet" href="dashboard/public/css/bulma.css">
+	<link rel="stylesheet" href="dashboard/public/css/font-awesome.min.css">
+	<link rel="stylesheet" href="dashboard/public/css/main.css">
+	<meta property="og:url" content="/">
+	<meta property="og:type" content="website">
+	<meta property="og:title" content="">
+	<meta property="og:description"
+		content="">
+	<meta property="og:image" content="https://thunderstruck.gg/dashboard/public/images/loho.png">
+	<meta property="og:image:secure_url" content="">
+	<meta name="viewport" content="width=device-width, initial-scale=0.8">
+	<style>
+		.status td {
+			text-align: center !important;
+			padding: 2px;
+		}
+
+		.status thead {
+			border-bottom: 1px solid #ddd;
+		}
+
+		.status th:first-child,
+		.status td:first-child {
+			font-weight: bolder;
+		}
+
+		.premium td {
+			text-align: center !important;
+			padding: 15px;
+		}
+
+		.premium th,
+		.premium td {
+			border-bottom: 1px solid #ddd;
+		}
+
+		.premium th:first-child,
+		.premium td:first-child {
+			font-weight: bolder;
+		}
+
+		::-webkit-scrollbar { width: 10px; }
+		::-webkit-scrollbar-track { background: #33cccc; }
+		::-webkit-scrollbar-thumb { background: #33cccc; }
+		::-webkit-scrollbar-thumb:hover { background: #33cccc; }        
+
+		#particle-js {
+			position: absolute;
+			width: 100%;
+			height: 100%;
+			background-repeat: no-repeat;
+			background-size: cover;
+			background-position: 50% 50%;
+			opacity: 0.48;
+		}
+
+		canvas {
+			position: fixed;
+		}
+
+		@media screen and (max-width: 770px) {
+			.hero-body {
+				padding: 0px !important;
+				padding-top: 3em !important;
+			}
+		}
+
+		.circle:before {
+			content: ' \25CF';
+			font-size: 16px;
+		}
+	</style>
 </head>
-<body style="font-family: 'Open Sans', sans-serif; background-color: #ffca60;">
 
-<div class="navbar navbar-default navbar-fixed-top" role="navigation" style="background-color: #fff">
-<div class="container">
-<div class="navbar-header">
-<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-<span class="sr-only">Toggle navigation</span>
-<span class="icon-bar"></span>
-<span class="icon-bar"></span>
-<span class="icon-bar"></span>
-</button>
-<a class="navbar-brand shake-slow" href="index.html"><img style="width: 100px; height: 100px;" src="assets/images/toasty_transparent.png"></a>
-</div>
-<div class="navbar-collapse collapse">
-<ul class="nav navbar-nav navbar-right">
-<li><a href="features.html">Features</a></li>
-<li><a href="invite.html">Invite Me</a></li>
-<li><a href="donate.html">Donate</a></li>
-<li><a href="https://discordapp.com/invite/sKCDdfp">Support Server</a></li>
-</ul>
-</div>
+<body>
+	<section class="hero is-info is-fullheight"
+		style="background-image: url('index.html'); background-size: cover; background-color: #33cccc;">
+		<!-- Hero header: will stick at the top -->
+		<div class="hero-head">
+			<header class="nav">
+				<div class="container">
+					<a class="nav-item" href='index.html'>
+						<img src="dashboard/public/images/hi.png" class="hideme" style="width: 8em;">
+					</a>
+					<div class="nav-right">
+												
+								<a href="index.html" class="nav-item is-active">
+									Home
+								</a>
+								<a href="commands.html" class="nav-item ">
+									Commands
+								</a>
+								<a href="stats.html" class="nav-item ">
+									Stats
+								</a>
+								<a href="privacy.html" class="nav-item">
+									Privacy Policy
+								</a>			
+								<a href="vote.html" class="nav-item">
+									Vote
+								</a>
+								<a href="https://thunderstruck.gg/support" class="nav-item">
+									Support Server
+								</a>
+								<a href="invite.html"
+									class="nav-item">
+									<span>Invite</span>
+								</a> 		
+								
+					</div>
+				</div>
+			</header>
+		</div>
 
+<!-- Hero content: will be in the middle -->
+<title>Thunderstruck - Home</title>
+<div id="particles-js"></div>
+<div class="hero-body">
+	<div class="container has-text-centered">
+		<h1 class="title">
+			<img src="dashboard/public/images/loho.png" style="border-radius: 50%; width: 5em;">
+		</h1>
+		<h2 class="subtitle" style="margin-top: 1em;">
+			A Multi - Functionality <img src="dashboard/public/images/discord-logo.svg"
+				style="width: 5em; vertical-align: middle; margin-bottom: 0.2em;"> bot.
+			<div class="info">
+				<marquee width="100%" direction="left" height="30px" bgcolor="black">
+					Thunderstruck is still not a verified bot on Discord yet this means we are temporarily limited to 100 servers!, Please bare with us as we apply for verification! Thunderstruck is currently in 85 guilds.
+				</marquee>
+				<nav class="level" style="margin-top: 2em;">
+					<div class="level-item has-text-centered">
+						<div>
+							<p class="heading">Guilds</p>
+							<p class="title">85</p>
+						</div>
+					</div>
+					<div class="level-item has-text-centered">
+						<div>
+							<p class="heading">Channels</p>
+							<p class="title">2,783</p>
+						</div>
+					</div>
+					<div class="level-item has-text-centered">
+						<div>
+							<p class="heading">Users</p>
+							<p class="title">182,230</p>
+						</div>
+					</div>
+					<div class="level-item has-text-centered">
+						<div>
+							<p class="heading">Commands</p>
+							<p class="title">163</p>
+						</div>
+					</div>
+					<div class="level-item has-text-centered">
+						<div>
+							<p class="heading">Uptime</p>
+							<p class="title">a day</p>
+						</div>
+					</div>
+				</nav>
+			</div>
+		</h2>
+		<div style="margin-top:3em;">
+			<a href="invite.html" class=" button is-info is-inverted "
+				style="background-color: #ffbebb00; color: #ffffff; border-color: white;">
+				<span>Invite Thunderstruck To Your Server</span>
+			</a>
+		</div>
+	</div>
 </div>
-</div>
-<style>
-    .btn-lg-custom {
-      padding: 16px 47px;
-      border-radius: 8px;
-      font-size: 17px;
-    }
-    .btn-lg:hover {
-      filter: brightness(90%);
-    }
-    .btn-lg-custom:hover {
-      filter: brightness(90%);
-    }
-  </style>
-<script>
-  document.addEventListener('DOMContentLoaded', function(event) {
-    var typed = new Typed('#typedCommands', {
-      strings: [';play Heart Afire', ';volume 5', ';ban @user', ';toggle noinvite', ';prune 100', ';gif', ';reddit', ';youtube', ';joke', ';fortnite', ';news', ';poll', ';pokemon', ';trade', ';roast', ';roleme', ';cookie', ';addrole @user', ';cat', ';advice', ';compliment', ';urban', ';info', ';queue', ';playlist', ';djrole'],
-      typeSpeed: 50,
-      backSpeed: 30,
-      loop: true
-    });
-  });
-  </script>
-<center>
-<h1 style="font-size: 80px; padding-top:100px; color: black;">Toasty Bot</h1>
-<h1 style="color: #23272A; padding-top: 25px; padding-bottom: 25px; font-weight: bold;">Make your Discord even <i>toastier</i>,
-<br>with Toasty!</h1>
-<span style="font-size: 20px; font-weight: bold; color: #2C2F33" id="typedCommands"></span><br><br><br>
-<a href="https://discordapp.com/oauth2/authorize?client_id=208946600620326912&scope=bot&permissions=8"><button type="button" class="btn btn-lg" style="background-color: #7289da; color: white;"><img src="https://mee6.xyz/assets/a219956caf348a5bc3434b17fce51349.svg">&nbsp;&nbsp;Add to Discord</button></a>
-&nbsp;
-<a href="features.html"><button type="button" class="btn btn-lg-custom" style="background-color: #23272a; color: white;">&nbsp;Learn More&nbsp;</button></a>
-<h4 style="color: #23272A; font-weight: 600; padding-top: 20px;">The only Discord bot that's useful, fun, and delicious.</h2>
-<div class="footer">
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-
-<ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-1185518089298036" data-ad-slot="4909194215" data-ad-format="auto">
-</ins>
-<script>
-        (adsbygoogle = window.adsbygoogle || []).push({});
-      </script>
-</div>
-</center>
+</section>
 </body>
+<script src="dashboard/public/js/particles.min.js"></script>
+<script>
+	particlesJS('particles-js', {
+		"particles": {
+			"number": {
+				"value": 50,
+				"density": {
+					"enable": true,
+					"value_area": 800
+				}
+			},
+			"color": {
+				"value": "#ffffff"
+			},
+			"shape": {
+				"type": "circle",
+				"stroke": {
+					"width": 0,
+					"color": "#000000"
+				},
+				"polygon": {
+					"nb_sides": 5
+				},
+				"image": {
+					"src": "https://thunderstruck.gg/dashboard/public/images/github.svg",
+					"width": 100,
+					"height": 100
+				}
+			},
+			"opacity": {
+				"value": 0.5,
+				"random": false,
+				"anim": {
+					"enable": false,
+					"speed": 1,
+					"opacity_min": 0.1,
+					"sync": false
+				}
+			},
+			"size": {
+				"value": 3,
+				"random": true,
+				"anim": {
+					"enable": false,
+					"speed": 40,
+					"size_min": 0.1,
+					"sync": false
+				}
+			},
+			"line_linked": {
+				"enable": true,
+				"distance": 150,
+				"color": "#ffffff",
+				"opacity": 0.4,
+				"width": 0.9469771699587272
+			},
+			"move": {
+				"enable": true,
+				"speed": 1.5782952832645452,
+				"direction": "none",
+				"random": false,
+				"straight": false,
+				"out_mode": "out",
+				"bounce": false,
+				"attract": {
+					"enable": false,
+					"rotateX": 600,
+					"rotateY": 1200
+				}
+			}
+		},
+		"interactivity": {
+			"detect_on": "canvas",
+			"events": {
+				"onhover": {
+					"enable": false,
+					"mode": "repulse"
+				},
+				"onclick": {
+					"enable": true,
+					"mode": "push"
+				},
+				"resize": true
+			},
+			"modes": {
+				"grab": {
+					"distance": 400,
+					"line_linked": {
+						"opacity": 1
+					}
+				},
+				"bubble": {
+					"distance": 400,
+					"size": 40,
+					"duration": 2,
+					"opacity": 8,
+					"speed": 3
+				},
+				"repulse": {
+					"distance": 200,
+					"duration": 0.4
+				},
+				"push": {
+					"particles_nb": 4
+				},
+				"remove": {
+					"particles_nb": 2
+				}
+			}
+		},
+		"retina_detect": true
+	});
+</script>
 </html>
